✨ Finish about me

--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -1,32 +1,44 @@
 <div class="terminal-container">
-  <div
-    id="termynal"
-    data-termynal
-    data-ty-typeDelay="30"
-    data-ty-lineDelay="700"
-  >
-    <span data-ty="input" data-ty-prompt="▲"
-      >yarn add @dsgdsr/about-me@latest</span
+    <div
+        id="termynal"
+        data-termynal
+        data-ty-typeDelay="20"
+        data-ty-lineDelay="500"
     >
-    <span data-ty>#TODO about</span>
-    <span data-ty="input" data-ty-prompt="▲"
-      >cat ../portfolio/projects.list</span
-    >
-    <span data-ty
-      >['<a href="#">spotifyrics</a>', '<a href="#">pykedex</a>', '<a href="#"
-        >react-progress</a
-      >', '<a href="#">project 4</a>']</span
-    >
-    <span data-ty="input" data-ty-prompt="▲">node</span>
-    <span data-ty="input" data-ty-prompt=">"
-      >import {{ "{" }} MailService {{ "}" }} from 'mail'</span
-    >
-    <span data-ty="input" data-ty-prompt=">"
-      >MailService.search('dsgdsr 🦄')</span
-    >
-    <span data-ty
-      >Contact mail found:
-      <a href="mailto:contact@dsgdsr.me">contact@dsgdsr.me</a></span
-    >
-  </div>
+        <span data-ty="input" data-ty-prompt="▲"
+            >yarn add @dsgdsr/about-me@latest</span
+        >
+        <div data-ty="about">
+            <p>
+                Hi! I'm <span highlight>David</span>, a Front-End Developer
+                located in Spain. I have a serious passion for web coding, UI/UX
+                design and... JavaScript :3
+            </p>
+            <p>
+                Well-organised and problem solver with high attention to detail.
+                Currently working on ambitious projects with positive people, as
+                part of
+                <a target="_blank" href="https://innovation.group"
+                    >Innovation Group</a
+                >.
+            </p>
+        </div>
+        <span data-ty="input" data-ty-prompt="▲">cat ../website/todo.list</span>
+        <span data-ty
+            >['weekly <a routerLink="/blog">blog</a> post', 'finish
+            <a href="https://sudoku.dsgdsr.me" target="_blank">paperdoku</a
+            >']</span
+        >
+        <span data-ty="input" data-ty-prompt="▲">node</span>
+        <span data-ty="input" data-ty-prompt=">"
+            >import {{ "{" }} MailService {{ "}" }} from 'mail'</span
+        >
+        <span data-ty="input" data-ty-prompt=">"
+            >MailService.search('dsgdsr 🦄')</span
+        >
+        <span data-ty
+            >Contact mail found:
+            <a href="mailto:contact@dsgdsr.me">contact@dsgdsr.me</a></span
+        >
+    </div>
 </div>
