--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,13 +1,16 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
-        <figure>
-            <img
-                loading="lazy"
-                class="project__image"
-                [alt]="project?.name + ' - ' + project?.description"
-                src="/assets/images/projects/{{ project?.image_name }}"
-            />
-        </figure>
+        <a [href]="project.url" target="_blank">
+            <figure>
+                <div class="project__image__filter"></div>
+                <img
+                    loading="lazy"
+                    class="project__image"
+                    [alt]="project?.name + ' - ' + project?.description"
+                    src="/assets/images/projects/{{ project?.image_name }}"
+                />
+            </figure>
+        </a>
 
         <div class="project__links">
             <ng-container *ngFor="let link of project?.links">
@@ -35,7 +38,7 @@
                 <ng-container
                     *ngTemplateOutlet="
                         projectUrl;
-                        context: { url: project?.url }
+                        context: { project: project }
                     "
                 ></ng-container>
             </h3>
@@ -50,8 +53,15 @@
     </div>
 </div>
 
-<ng-template #projectUrl let-url="url">
-    <a *ngIf="url" class="project__url" [href]="url" target="_blank">
+<ng-template #projectUrl let-project="project">
+    <a *ngIf="project?.url"
+        [aria-describedby]="'url-' + project?.slug"
+        [aria-label]="project?.name + ' project webpage'"
+        class="project__url"
+        [href]="project.url"
+        target="_blank"
+    >
+        <span aria-hidden="true" [id]="'url-' + project?.slug" style="display: none;">{{project?.name + ' project webpage'}}</span>
         <i-feather name="external-link" class="project__url-icon"></i-feather>
     </a>
 </ng-template>
