--- a/src/app/components/social-links/social-links.component.html
+++ b/src/app/components/social-links/social-links.component.html
@@ -1,15 +1,15 @@
 <div class="social-links">
   <ul class="social-icons-list">
+    <!--li class="social-icon">
+      <a href="mailto:contact@dsgdsr.me" aria-label="Email" target="_blank" rel="noreferrer" class="social-icon__link">
+        <span class="social-icon__link__text">Email</span>
+        <i-feather class="icon" name="mail"></i-feather>
+      </a>
+    </li-->
     <li class="social-icon">
       <a href="https://codepen.io/dsgdsr" aria-label="Codepen" target="_blank" rel="noreferrer" class="social-icon__link">
         <span class="social-icon__link__text">Codepen</span>
         <i-feather class="icon" name="codepen"></i-feather>
-      </a>
-    </li>
-    <li class="social-icon">
-      <a href="https://twitter.com/dsgdsr_" aria-label="Twitter" target="_blank" rel="noreferrer" class="social-icon__link">
-        <span class="social-icon__link__text">Twiter</span>
-        <i-feather class="icon" name="twitter"></i-feather>
       </a>
     </li>
     <li class="social-icon">
