--- a/src/app/pages/blog/list/blog-list.component.scss
+++ b/src/app/pages/blog/list/blog-list.component.scss
@@ -33,6 +33,7 @@
             &_footer {
                 display: flex;
                 justify-content: space-between;
+                align-items: flex-end;
                 
                 &__more {
                     font-size: .8em;
