--- a/src/app/components/back-to-top/back-to-top.component.html
+++ b/src/app/components/back-to-top/back-to-top.component.html
@@ -1,6 +1,6 @@
 <div class="bttop-container" (click)="scroll()">
-  <span class="{{ isAtTop && router.url === '/' ? null : 'hidden' }}"
-    >scroll</span
+  <span class="text {{ isAtTop && router.url === '/' ? null : 'hidden' }}"
+    >more about me</span
   >
   <ng-container *ngIf="router.url === '/'; else elseTemplate">
     <i-feather
