--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,12 +1,34 @@
-<app-terminal></app-terminal>
+<!--app-terminal></app-terminal-->
 
-<div class="featured-project__list">
-    <h2 class="featured-project__list-title">Featured work</h2>
+<section id="about-me">
+    <header>
+        <span>Hi, my name is</span>
+        <h2>David Sanchez.</h2>
+        <h3>I create solutions for the web.</h3>
+    </header>
+    <article>
+        <p><s>I'm a front-end developer focused on creating engaging and interactive experiences. I have a strong eye for design and a deep understanding on optimizing web pages thanks to my experience working with different technologies.</s></p>
+
+        <p><s>Just a </s><span class="hightlight">JavaScript</span><s> lover with a focus on creativity and results, always seeking new challenges to grow my skills. Currenly working for </s><span class="hightlight">Innovation Group</span><s>.</s></p>
+    </article>
+</section>
+
+<section id="featured-projects">
+    <h3>Featured work</h3>
     <ng-container *ngFor="let project of projects">
-        <div class="featured-project__separator"></div>
         <app-featured-project
             [project]="project"
             [rtl]="project.index % 2"
         ></app-featured-project>
     </ng-container>
-</div>
+</section>
+
+<section id="contact">
+    <h3>Contact me</h3>
+    <pre><code><span class="hightlight">▲</span> node
+
+<span class="hightlight">></span> import {{'{'}} MailService {{'}'}} from 'mail'
+<span class="hightlight">></span> MailService.search('dsgdsr 🦄')
+
+Contact mail found: <a href="mailto:contact@dsgdsr.me">contact@dsgdsr.me</a></code></pre>
+</section>
