--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ a {
 }
 
 body.light {
-    --bg-color: white;
+    --bg-color: #f0f0f0;
     --scrollbar-bg: #333333;
     --bg-secondary-color: #30333e;
     --text-color: #161618;
@@ -67,7 +67,7 @@ body.dark {
     --bg-color: #23252c;
     --scrollbar-bg: #ffffff;
     --bg-secondary-color: #323744;
-    --text-color: white;
+    --text-color: #ffffff;
     --color-text-main: #ff69c1;
     --terminal-shadow: 0px 10px 20px #00000030;
 }
