🧪  Fix unit tests

--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,6 +1,6 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
-        <a [href]="project.url" target="_blank">
+        <a [href]="project?.url" target="_blank">
             <figure>
                 <div class="project__image__filter"></div>
                 <img
