--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,40 +4,35 @@
     font-family: "Roboto Mono";
     font-style: normal;
     font-weight: 300;
-    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-300.woff2") format("woff2"),
-                    url("/assets/fonts/roboto-mono-v13-latin-300.woff") format("woff");
+    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-300.woff2") format("woff2");
 }
 /* roboto-mono-regular - latin */
 @font-face {
     font-family: "Roboto Mono";
     font-style: normal;
     font-weight: 400;
-    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-regular.woff2") format("woff2"),
-                    url("/assets/fonts/roboto-mono-v13-latin-regular.woff") format("woff");
+    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-regular.woff2") format("woff2");
 }
 /* roboto-mono-500 - latin */
 @font-face {
     font-family: "Roboto Mono";
     font-style: normal;
     font-weight: 500;
-    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-500.woff2") format("woff2"),
-                    url("/assets/fonts/roboto-mono-v13-latin-500.woff") format("woff");
+    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-500.woff2") format("woff2");
 }
 /* roboto-mono-600 - latin */
 @font-face {
     font-family: "Roboto Mono";
     font-style: normal;
     font-weight: 600;
-    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-600.woff2") format("woff2"),
-                    url("/assets/fonts/roboto-mono-v13-latin-600.woff") format("woff");
+    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-600.woff2") format("woff2");
 }
 /* roboto-mono-700 - latin */
 @font-face {
     font-family: "Roboto Mono";
     font-style: normal;
     font-weight: 700;
-    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-700.woff2") format("woff2"),
-                    url("/assets/fonts/roboto-mono-v13-latin-700.woff") format("woff");
+    src: local(""), url("/assets/fonts/roboto-mono-v13-latin-700.woff2") format("woff2");
 }
 
 // GENERAL SYLES
