✨ Big refactor and update for the whole web

--- a/src/app/components/back-to-top/back-to-top.component.html
+++ b/src/app/components/back-to-top/back-to-top.component.html
@@ -1,7 +1,8 @@
 <div class="bttop-container" (click)="scroll()">
-  <span class="text {{ isAtTop && router.url === '/' ? null : 'hidden' }}"
-    >more about me</span
-  >
+  <span
+    class="text {{ isAtTop && router.url === '/' ? null : 'hidden' }}"
+    [translate]="'HOME.MORE_ABOUT_ME'"
+  ></span>
   <ng-container *ngIf="router.url === '/'; else elseTemplate">
     <i-feather
       name="arrow-down"
