--- a/src/app/components/back-to-top/back-to-top.component.scss
+++ b/src/app/components/back-to-top/back-to-top.component.scss
@@ -2,13 +2,17 @@
   .bttop-container {
     position: fixed;
     bottom: 0; right: 0;
-    margin: 2em 2.2em;
+    margin: 2em 1.75em;
     display: flex;
     align-items: center;
     font-size: .8em;
     font-weight: 500;
     cursor: pointer;
     color: var(--text-color);
+
+    @media (min-width: 600px) {
+      margin: 2em 2.2em;
+    }
 
     .hidden {
       opacity: 0;
