--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <app-nav></app-nav>
 
   <router-outlet></router-outlet>
-
+  
+  <app-cursor></app-cursor>
   <app-social-links></app-social-links>
   <app-back-to-top></app-back-to-top>
 </div>
