--- a/src/app/components/featured-project/featured-project.component.scss
+++ b/src/app/components/featured-project/featured-project.component.scss
@@ -7,12 +7,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        &:hover {
-            .project__image__filter {
-                opacity: 0;
-            }
-        }
     }
 
     .project__url {
@@ -33,15 +27,6 @@
             object-fit: cover;
             aspect-ratio: 16/9;
             box-shadow: 0px 10px 20px #00000030;
-            
-            &__filter {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background: var(--bg-secondary-color);
-                opacity: .5;
-                transition: opacity 500ms;
-            }
         }
 
         .project__links {
@@ -52,6 +37,10 @@
             & > a {
                 &:not(:last-child) {
                     margin-right: .5em;
+                }
+    
+                &:hover {
+                    color: var(--project-pink);
                 }
             }
             
@@ -71,10 +60,6 @@
                     position: absolute;
                     white-space: nowrap;
                     width: 1px;
-                }
-
-                &:hover {
-                    color: var(--project-pink);
                 }
                 
                 .project__link_icon {
@@ -125,6 +110,10 @@
             box-shadow: var(--terminal-shadow);
             pointer-events: all;
 
+            * {
+                pointer-events: none;
+            }
+
             .project__title {
                 position: relative;
                 font-size: 1.2rem;
@@ -148,8 +137,11 @@
 
             .project__tags {
                 margin-top: 1.5em;
-                float: right;
                 text-align: right;
+
+                @media (min-width: 600px) {
+                    float: right;
+                }
             }
         }
     }
