--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,20 @@
 <nav class="nav">
     <div class="nav-logo">
-        <span>
+        <a [routerLink]="['/']">
             <span>_</span>
             <h1>dsgdsr</h1>
-        </span>
+        </a>
     </div>
     <div class="nav-links">
         <a href="#" class="nav-link" (click)="navigateToWork()">
             <span class="nav-link-number">01</span>
-            <span>work</span>
+            <span [translate]="'NAVBAR.WORK'"></span>
         </a>
         <a routerLink="/blog" class="nav-link">
             <span class="nav-link-number">02</span>
-            <span>blog</span>
+            <span [translate]="'NAVBAR.BLOG'"></span>
         </a>
+        <span class="nav-link"><app-locale-switcher></app-locale-switcher></span>
         <span class="nav-link"><app-theme-switcher></app-theme-switcher></span>
     </div>
 </nav>
