--- a/src/app/components/social-links/social-links.component.scss
+++ b/src/app/components/social-links/social-links.component.scss
@@ -36,6 +36,18 @@
         display: inline-block;
         padding: .6em 0;
 
+        &:hover .icon {
+          color: var(--color-text-main);
+
+          &:not([name="linkedin"]) {
+            stroke: var(--color-text-main);
+          }
+
+          &[name="linkedin"] {
+            fill: var(--color-text-main);
+          }
+        }
+
         &__text {
           clip-path: inset(100%);
           clip: rect(1px, 1px, 1px, 1px);
@@ -54,18 +66,6 @@
           &[name="linkedin"] {
             stroke: transparent;
             fill: var(--text-color);
-          }
-
-          &:hover {
-            color: var(--color-text-main);
-
-            &:not([name="linkedin"]) {
-              stroke: var(--color-text-main);
-            }
-
-            &[name="linkedin"] {
-              fill: var(--color-text-main);
-            }
           }
         }
       }
