--- a/src/app/components/tag-list/tag-list.component.scss
+++ b/src/app/components/tag-list/tag-list.component.scss
@@ -1,18 +1,19 @@
 :host {
   .tag-list__container {
+    display: flex;
+    gap: .75em;
     font-size: .75em;
     color: #ff69c1;
+    flex-wrap: wrap;
+
+    * {
+      user-select: none;
+    }
     
     .tag {
       position: relative;
       padding: .2em .5em;
-      margin: .75em 0 0 .75em;
       white-space: nowrap;
-      display: inline-block;
-      
-      &:last-child {
-        margin-right: 0;
-      }
 
       &__background {
         content: "";
