--- a/src/app/pages/blog/post/blog-post.component.scss
+++ b/src/app/pages/blog/post/blog-post.component.scss
@@ -1,25 +1,87 @@
 :host {
-    .blog-post__wrapper {
+    .blog-post__wrapper > article {
         margin: 0 auto;
-        padding: 9em 2.2em 5em 2.2em;
-        max-width: 100%;
-        width: 700px;
+        padding: 8rem 1.75rem 5rem 1.75rem;
         color: var(--text-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-        .blog-post__title {
+        @media (min-width: 600px) {
+            padding: 9rem 2.2rem 5rem 2.2rem;
+        }
+
+        header {
+            width: 700px;
+            max-width: 100%;
             display: flex;
-            align-items: flex-end;
-            flex-direction: column-reverse;
-            margin-bottom: 2.5em;
+            justify-content: flex-end;
+            flex-direction: column;
+            margin-bottom: 1.75em;
 
             h1 {
-                margin-top: 1em;
+                font-size: 1.5em;
+                margin: 1.5em 0;
                 align-self: start;
+                
+                @media (min-width: 600px) {
+                    font-size: 1.85em;
+                }
+            }
+
+            .blog-post__details {
+                display: flex;
+                flex-direction: column-reverse;
+                
+                @media (min-width: 600px) {
+                    flex-direction: row;
+                    justify-content: space-between;
+                }
+
+                time {
+                    font-size: .85em;
+                    margin-bottom: 1em;
+                    color: var(--color-text-secondary);
+
+                    @media (min-width: 600px) {
+                        margin-bottom: 0;
+                        font-size: .95em;
+                    }
+                }
             }
         }
 
         markdown ::ng-deep {
-            font-size: .9em;
+            font-size: .9rem;
+            line-height: 1.75;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 100%;
+
+            @media (min-width: 600px) {
+                font-size: 1rem;
+            }
+            
+            * {
+                font-family: var(--system-fonts);
+            }
+            
+            pre *, code {
+                font-family: var(--default-fonts);
+                line-height: 1.25;
+                font-size: .9rem;
+            }
+
+            & > * {
+                width: 700px;
+                max-width: 100%;
+            }
+        
+            p:has(img[alt*="CAPTION"]) {
+                width: 900px;
+                margin-bottom: 2em;
+            }
 
             img {
                 max-width: 100%;
@@ -31,6 +93,27 @@
                 &:hover {
                     text-decoration: underline;
                 }
+            }
+
+            pre[class*='language'] + div {
+                opacity: 100 !important;
+                top: 1.6em !important;
+                right: 1em !important;
+            }
+
+            code:not([class*='language-']) {
+                color: white;
+                font-size: .8rem;
+                background-color: var(--selection);
+                padding: 2px 5px;
+                border-radius: 0.5em;
+                font-weight: unset !important;
+                vertical-align: text-top;
+            }
+
+            code.language-bash::before {
+                content: '$ ';
+                color: var(--color-text-secondary);
             }
         }
     }
