--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,11 @@
     src: local(""), url("/assets/fonts/roboto-mono-v13-latin-700.woff2") format("woff2");
 }
 
+:root {
+    --system-fonts: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    --default-fonts: "Roboto Mono", Menlo, Monaco, "Courier New", Courier, monospace;
+}
+
 // GENERAL SYLES
 *:not(markdown) > * {
     margin: 0;
@@ -64,7 +69,29 @@ body.dark {
     --bg-secondary-color: #323744;
     --text-color: #ffffff;
     --color-text-main: #ff69c1;
+    --color-text-secondary: #888888;
     --terminal-shadow: 0px 10px 20px #00000030;
+}
+
+::selection {
+    background-color: var(--color-text-secondary);
+}
+
+*:not(select.open) {
+    cursor: none !important;
+}
+
+html, body {
+    overflow-x: hidden;
+}
+
+a * {
+    pointer-events: none;
+}
+
+#about-me .highlight {
+    font-family: var(--system-fonts);
+    color: var(--color-text-main);
 }
 
 body {
