[bugfix] Fix #3 - Contact section styles

--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -78,12 +78,12 @@
     }
 
     #contact {
-        margin: 12.5rem 0 10rem 0;
+        margin: 11rem 0 7.5rem 0;
         padding: 0 2.2em;
             
         pre {
-            color: var(--text-color);
-            margin: 6rem auto 0 auto;
+            color: white;
+            margin: 4.5rem auto 0 auto;
             background: var(--bg-secondary-color);
             border-radius: 0.375em;
             width: fit-content;
