[feature] Display social networks in mobile view #2

--- a/src/app/components/back-to-top/back-to-top.component.scss
+++ b/src/app/components/back-to-top/back-to-top.component.scss
@@ -25,6 +25,10 @@
 
     span, i-feather {
       transition: opacity .2s ease;
+
+      ::ng-deep svg {
+        width: intrinsic;
+      }
     }
     
     .arrow-icon {
