--- a/src/app/components/featured-project/featured-project.component.scss
+++ b/src/app/components/featured-project/featured-project.component.scss
@@ -39,8 +39,10 @@
                     margin-right: .5em;
                 }
     
-                &:hover {
-                    color: var(--project-pink);
+                @media (min-width: 600px) {
+                    &:hover {
+                        color: var(--project-pink);
+                    }
                 }
             }
             
