--- a/src/app/components/social-links/social-links.component.scss
+++ b/src/app/components/social-links/social-links.component.scss
@@ -40,15 +40,17 @@
         display: inline-block;
         padding: .6em 0;
 
-        &:hover .icon {
-          color: var(--color-text-main);
+        @media (min-width: 600px) {
+          &:hover .icon {
+            color: var(--color-text-main);
 
-          &:not([name="linkedin"]) {
-            stroke: var(--color-text-main);
-          }
+            &:not([name="linkedin"]) {
+              stroke: var(--color-text-main);
+            }
 
-          &[name="linkedin"] {
-            fill: var(--color-text-main);
+            &[name="linkedin"] {
+              fill: var(--color-text-main);
+            }
           }
         }
 
