--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -66,7 +66,7 @@
     #featured-projects {
         display: flex;
         flex-direction: column;
-        margin: .5em auto 5em auto;
+        margin: .5em auto 10em auto;
         max-width: 100%;
         width: 980px;
         padding: 0 2.2em;
@@ -78,10 +78,10 @@
     }
 
     #contact {
-        padding: 11rem 2.2em 12rem 2.2em;
+        padding: 0 2.2em 10rem 2.2em;
 
         @media (min-width: 600px) {
-            padding-top: 8rem;
+            padding-bottom: 8rem;
         }
             
         pre {
