--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -5,7 +5,7 @@
                 loading="lazy"
                 class="project__image"
                 [alt]="project?.name + ' - ' + project?.description"
-                [attr.cursorLink]="project.url"
+                [attr.cursorLink]="project?.url"
                 src="/assets/images/projects/{{ project?.image_name }}"
             />
         </figure>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="project__wrapper">
-        <div class="project__container" [attr.cursorLink]="project.url">
+        <div class="project__container" [attr.cursorLink]="project?.url">
             <h3 class="project__title">
                 {{ project?.name }}
             </h3>
